<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    android:background="@drawable/background"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent" 
    android:orientation="vertical"
	xmlns:android="http://schemas.android.com/apk/res/android">

<!--111111111 -->
    <LinearLayout   
        android:orientation="horizontal"  
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"  
        >

        <TextView   
            android:text="@string/addr"  
            android:gravity="center"  
            android:background="#33a1c9"  
            android:layout_width="0dp"  
            android:layout_height="fill_parent"  
            android:textSize="20dp"
            android:layout_weight="1"/>   
        <TextView   
            android:text="@string/old_v"  
            android:gravity="center"  
            android:background="#33a1c9"  
            android:layout_width="0dp"  
            android:layout_height="fill_parent"  
            android:textSize="20dp"
            android:layout_weight="1"/>
        <TextView 
            android:text="@string/new_v"  
            android:gravity="center"  
            android:background="#33a1c9"  
            android:layout_width="0dp"  
            android:layout_height="fill_parent"  
            android:textSize="20dp"
            android:layout_weight="1"/>   
    </LinearLayout>


<!--2222222222 -->
    <ListView android:layout_width="fill_parent" 
              android:layout_height="0dp" 
              android:id="@+id/pus_job_data_listview"
              android:fadingEdge="vertical"
              android:layout_weight="1"
          />

    <TextView   
        android:layout_width="fill_parent"  
        android:layout_height="2dp"  
    />  


<!--33333333333 -->
    <LinearLayout
        android:orientation="vertical"  
        android:transcriptMode="alwaysScroll" 
        android:layout_width="fill_parent"  
        android:layout_height="0dp"  
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
    >

        <!--download size pagedown-->
        <LinearLayout   
            android:orientation="horizontal"  
            android:layout_width="fill_parent"  
            android:layout_height="0dp"  
            android:layout_weight="1"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
        >   
            <TextView   
                android:text="@string/inputaddr"  
                android:layout_width="0dp"  
                android:layout_height="fill_parent"  
                android:textSize="20dp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp"
                android:background="#ffffff"  
                />
            <EditText
                android:id="@+id/pus_job_data_addr"
                android:background="#ffffff"  
                android:layout_width="0dp"  
                android:layout_height="fill_parent"  
                android:gravity="center"
                android:inputType="none" 
                android:textSize="20dp"
                android:layout_weight="2"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp"
            />   
            <Button
                android:id="@+id/pus_job_data_upload"
                android:layout_width="0dp" 
                android:layout_height="fill_parent" 
                android:background="#ffffff"  
                android:text="@string/upload"
                android:layout_weight="1"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp"
            />
        </LinearLayout>  

        <!--upload addr -->
        <LinearLayout   
            android:orientation="horizontal"  
            android:layout_width="fill_parent"  
            android:layout_height="0dp"  
            android:layout_weight="1"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
        >
            <TextView   
                android:text="@string/inputsize"  
                android:layout_width="0dp"  
                android:layout_height="fill_parent"  
                android:textSize="20dp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:background="#ffffff"  
                />
            <EditText
                android:id="@+id/pus_job_data_size"
                android:background="#ffffff"  
                android:layout_width="0dp"  
                android:layout_height="fill_parent"  
                android:gravity="center"
                android:inputType="none" 
                android:textSize="20dp"
                android:layout_weight="1"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp"
            />   
            <Button
                android:id="@+id/add_file"
                android:layout_width="0dp" 
                android:layout_height="fill_parent" 
                android:background="#ffffff"  
                android:text="@string/add_file"
                android:layout_weight="1"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp"
            />
            <Button
                android:id="@+id/pus_job_data_download"
                android:layout_width="0dp" 
                android:layout_height="fill_parent" 
                android:background="#ffffff"  
                android:text="@string/download"
                android:layout_weight="1"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp"
            />
        </LinearLayout>  
        

        

            <!--A 1 2 3-->
        <View  
            android:layout_width="fill_parent"  
            android:layout_height="2dp" 
            android:background="?android:attr/listDivider"  
        />  
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"  
            android:layout_height="0dp"  
            android:layout_weight="1"
        >   
                <Button
                    android:id="@+id/pus_job_data_keyA"
                    android:layout_alignParentLeft="true"
                    android:layout_width="0dp" 
                    android:layout_height="fill_parent" 
                    android:background="#ffffff"  
                    android:text="@string/keyA"
                    android:textSize="21dp"
                    android:gravity="center"
                    android:layout_weight="1"
                />
                <TextView   
                    android:layout_width="2dp"  
                    android:layout_height="fill_parent"  
                />  
                <Button
                    android:id="@+id/pus_job_data_key1"
                    android:layout_alignParentRight="true"
                    android:layout_width="0dp" 
                    android:layout_height="fill_parent" 
                    android:background="#ffffff"  
                    android:text="@string/key1"
                    android:textSize="21dp"
                    android:gravity="center"
                    android:layout_weight="1"
                />
                <TextView   
                    android:layout_width="2dp"  
                    android:layout_height="fill_parent"  
                />  
                <Button
                    android:id="@+id/pus_job_data_key2"
                    android:layout_alignParentLeft="true"
                    android:layout_width="0dp" 
                    android:layout_height="fill_parent" 
                    android:background="#ffffff"  
                    android:text="@string/key2"
                    android:textSize="21dp"
                    android:gravity="center"
                    android:layout_weight="1"
                />
                <TextView   
                    android:layout_width="2dp"  
                    android:layout_height="fill_parent"  
                />  
                <Button
                    android:id="@+id/pus_job_data_key3"
                    android:layout_alignParentRight="true"
                    android:layout_width="0dp" 
                    android:layout_height="fill_parent" 
                    android:background="#ffffff"  
                    android:text="@string/key3"
                    android:textSize="21dp"
                    android:gravity="center"
                    android:layout_weight="1"
                />
            </LinearLayout>
            
            <!--B 4 5 6-->
            <View  
                android:layout_width="fill_parent"  
                android:layout_height="2dp" 
                android:background="?android:attr/listDivider"  
            />  
            <LinearLayout   
                android:orientation="horizontal"  
                android:layout_width="fill_parent"  
                android:layout_height="0dp"  
                android:layout_weight="1"
            >   
                <Button
                    android:id="@+id/pus_job_data_keyB"
                    android:layout_alignParentLeft="true"
                    android:layout_width="0dp" 
                    android:layout_height="fill_parent" 
                    android:background="#ffffff"  
                    android:text="@string/keyB"
                    android:textSize="21dp"
                    android:gravity="center"
                    android:layout_weight="1"
                />
                <TextView   
                    android:layout_width="2dp"  
                    android:layout_height="fill_parent"  
                />  
                <Button
                    android:id="@+id/pus_job_data_key4"
                    android:layout_alignParentRight="true"
                    android:layout_width="0dp" 
                    android:layout_height="fill_parent" 
                    android:background="#ffffff"  
                    android:text="@string/key4"
                    android:textSize="21dp"
                    android:gravity="center"
                    android:layout_weight="1"
                />
                <TextView   
                    android:layout_width="2dp"  
                    android:layout_height="fill_parent"  
                />  
                <Button
                    android:id="@+id/pus_job_data_key5"
                    android:layout_alignParentLeft="true"
                    android:layout_width="0dp" 
                    android:layout_height="fill_parent" 
                    android:background="#ffffff"  
                    android:text="@string/key5"
                    android:textSize="21dp"
                    android:gravity="center"
                    android:layout_weight="1"
                />
                <TextView   
                    android:layout_width="2dp"  
                    android:layout_height="fill_parent"  
                />  
                <Button
                    android:id="@+id/pus_job_data_key6"
                    android:layout_alignParentRight="true"
                    android:layout_width="0dp" 
                    android:layout_height="fill_parent" 
                    android:background="#ffffff"  
                    android:text="@string/key6"
                    android:textSize="21dp"
                    android:gravity="center"
                    android:layout_weight="1"
                />
            </LinearLayout>  
            
            <!--C 7 8 9-->
            <View  
                android:layout_width="fill_parent"  
                android:layout_height="2dp" 
                android:background="?android:attr/listDivider"  
            />  
            <LinearLayout   
                android:orientation="horizontal"  
                android:layout_width="fill_parent"  
                android:layout_height="0dp"  
                android:layout_weight="1"
            >   
                <Button
                    android:id="@+id/pus_job_data_keyC"
                    android:layout_alignParentLeft="true"
                    android:layout_width="0dp" 
                    android:layout_height="fill_parent" 
                    android:background="#ffffff"  
                    android:text="@string/keyC"
                    android:textSize="21dp"
                    android:gravity="center"
                    android:layout_weight="1"
                />
                <TextView   
                    android:layout_width="2dp"  
                    android:layout_height="fill_parent"  
                />  
                <Button
                    android:id="@+id/pus_job_data_key7"
                    android:layout_alignParentRight="true"
                    android:layout_width="0dp" 
                    android:layout_height="fill_parent" 
                    android:background="#ffffff"  
                    android:text="@string/key7"
                    android:textSize="21dp"
                    android:gravity="center"
                    android:layout_weight="1"
                />
                <TextView   
                    android:layout_width="2dp"  
                    android:layout_height="fill_parent"  
                />  
                <Button
                    android:id="@+id/pus_job_data_key8"
                    android:layout_alignParentLeft="true"
                    android:layout_width="0dp" 
                    android:layout_height="fill_parent" 
                    android:background="#ffffff"  
                    android:text="@string/key8"
                    android:textSize="21dp"
                    android:gravity="center"
                    android:layout_weight="1"
                />
                <TextView   
                    android:layout_width="2dp"  
                    android:layout_height="fill_parent"  
                />  
                <Button
                    android:id="@+id/pus_job_data_key9"
                    android:layout_alignParentRight="true"
                    android:layout_width="0dp" 
                    android:layout_height="fill_parent" 
                    android:background="#ffffff"  
                    android:text="@string/key9"
                    android:textSize="21dp"
                    android:gravity="center"
                    android:layout_weight="1"
                />
            </LinearLayout>  
            
            <!--D E 0 F-->
            <View  
                android:layout_width="fill_parent"  
                android:layout_height="2dp" 
                android:background="?android:attr/listDivider"  
            />  
            <LinearLayout   
                android:orientation="horizontal"  
                android:layout_width="fill_parent"  
                android:layout_height="0dp"  
                android:layout_weight="1"
            >   
                <Button
                    android:id="@+id/pus_job_data_keyD"
                    android:layout_alignParentLeft="true"
                    android:layout_width="0dp" 
                    android:layout_height="fill_parent" 
                    android:background="#ffffff"  
                    android:text="@string/keyD"
                    android:textSize="21dp"
                    android:gravity="center"
                    android:layout_weight="1"
                />
                <TextView   
                    android:layout_width="2dp"  
                    android:layout_height="fill_parent"  
                />  
                <Button
                    android:id="@+id/pus_job_data_keyE"
                    android:layout_alignParentRight="true"
                    android:layout_width="0dp" 
                    android:layout_height="fill_parent" 
                    android:background="#ffffff"  
                    android:text="@string/keyE"
                    android:textSize="21dp"
                    android:gravity="center"
                    android:layout_weight="1"
                />
                <TextView   
                    android:layout_width="2dp"  
                    android:layout_height="fill_parent"  
                />  
                <Button
                    android:id="@+id/pus_job_data_key0"
                    android:layout_alignParentLeft="true"
                    android:layout_width="0dp" 
                    android:layout_height="fill_parent" 
                    android:background="#ffffff"  
                    android:text="@string/key0"
                    android:textSize="21dp"
                    android:gravity="center"
                    android:layout_weight="1"
                />
                <TextView   
                    android:layout_width="2dp"  
                    android:layout_height="fill_parent"  
                />  
                <Button
                    android:id="@+id/pus_job_data_keyF"
                    android:layout_alignParentRight="true"
                    android:layout_width="0dp" 
                    android:layout_height="fill_parent" 
                    android:background="#ffffff"  
                    android:text="@string/keyF"
                    android:textSize="21dp"
                    android:gravity="center"
                    android:layout_weight="1"
                />
            </LinearLayout>  
    </LinearLayout>  

</LinearLayout>

